--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ li:hover{
 .times-icon{
     color: red;
     font-size: 1.2rem;
+    display: none;
 }
 /* -------------------------------------------- */
   
