add li-hover style because after user clicks on the options remove li-hover

--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ li{
     justify-content: space-between;
     cursor: pointer;
 }
-li:hover{
+.li-hover:hover{
     background-color: rgb(224, 238, 250);
 }
 .check-icon{
