--- a/style.css
+++ b/style.css
@@ -179,6 +179,8 @@ li{
     border-radius: 4px;
     padding: 8px;
     cursor: pointer;
+    opacity: .7;
+    cursor: not-allowed;
 }
 .next-button:hover{
     color: rgb(50, 155, 241);
