--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ body{
 .continue-button:hover{
     background-color: rgb(50, 155, 241);
 }
-/* ------------------------------------------------------ */
+/* --- ques header -------------------------- */
 
 .questions-container{
     display: none;
@@ -116,6 +116,32 @@ body{
 }
 .header-title{
     font-weight: 600;
+}
+.header-timer{
+    background-color: rgb(205, 240, 253);
+    height: 40px;
+    width: 120px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 4px;
+    font-size: .9rem;
+}
+.timer-container{
+    height: 28px;
+    width: 40px;
+    color: white;
+    background-color: rgb(66, 66, 66);
+    border-radius: 4px;
+    text-align: center;
+}
+.timer-number{
+    font-size: 1.1rem;
+    font-weight: 600;
+    padding: 4px;
+}
+.time-content{
+    color: rgb(115, 69, 146);
 }
 /* -------------------------------------------------- */
 
@@ -180,7 +206,7 @@ li{
     padding: 8px;
     cursor: pointer;
     opacity: .7;
-    cursor: not-allowed;
+    cursor: default;
 }
 .next-button:hover{
     color: rgb(50, 155, 241);
