when answer the last question and click finish current page disappear the result page will be displayed and result of quiz by getting the user score will be displayed

--- a/style.css
+++ b/style.css
@@ -232,6 +232,7 @@ li{
     display: flex;
     flex-direction: column;
     text-align: center;
+    display: none;
 }
 .crown-container{
     height: 45%;
