--- a/style.css
+++ b/style.css
@@ -100,7 +100,6 @@ body{
 
 .questions-container{
     display: none;
-    height: 440px;
     width: 500px;
     background-color: white;
     border-radius: 4px;
@@ -170,7 +169,7 @@ li{
     justify-content: space-between;
     list-style: none;
     border-radius: 3px;
-    padding: 10px;
+    padding: 12px;
     margin-bottom: 12px;
     background-color: aliceblue;
     border: 1px lightblue solid;
@@ -401,5 +400,55 @@ li{
     }
     .rsltBtn-container{
         justify-content: space-between;
+    }
+}
+
+
+@media (min-width:378px) and (max-width:510px){
+    .info-container{
+        width: 95vw;
+        height: auto;
+    }
+    .info-header{
+        font-size: 1rem;
+        height: auto;
+        padding: 20px;
+    }
+    p{
+        font-size: .9rem;
+        margin-bottom: 14px;
+    }
+    
+    .info-buttons{
+        justify-content: space-around;
+        padding: 20px;
+    }
+    .exit-button, .continue-button{
+        height: 38px;
+        width: 100px;
+        font-size: .9rem;
+    }
+    .questions-container{
+        width: 95vw;
+        height: auto;
+    }
+    .question-header{
+        height: auto;
+    }
+    .header-title{
+        font: 1.1rem;
+    }
+    .header-timer{
+        width: 130px;
+    }
+    .question-content{
+        padding-top: 34px;
+    }
+    .question-footer{
+        margin-top: 14px;
+        padding: 10px;
+    }
+    .next-button{
+        font-size: 1rem;
     }
 }
